fixed overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,9 @@
 body, html {
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE and Edge */
+overflow-x: hidden; /* Prevent horizontal scroll */
+  width: 100vw;       /* Prevent accidental overflow */
+  max-width: 100vw;
 }
 body::-webkit-scrollbar, html::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera */
